// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.tsx Snapshot tests matches snapshot for button with confirmation dialog open from 4.30.2025 1`] = `
<div>
  <button
    aria-label="Delete Item"
    class="px-4 py-2 rounded-md transition-colors focus:outline-none focus:ring-2 
          text-sm sm:text-base bg-primary text-white hover:bg-primary-600 focus:ring-primary-200 "
    type="button"
  >
    Delete Item
  </button>
  <div
    class="fixed inset-0 bg-black bg-opacity-30 flex items-center justify-center z-50"
  >
    <div
      class="bg-white dark:bg-gray-800 p-6 rounded-md shadow-lg max-w-sm w-full"
    >
      <h3
        class="text-lg font-medium mb-3"
      >
        Confirm Delete
      </h3>
      <div
        class="mb-4"
      >
        Are you sure you want to delete this item?
      </div>
      <div
        class="flex justify-end space-x-3"
      >
        <button
          class="px-4 py-2 rounded-md border border-gray-300 hover:bg-gray-100 dark:border-gray-600 dark:hover:bg-gray-700"
          type="button"
        >
          Cancel
        </button>
        <button
          class="px-4 py-2 rounded-md bg-red-600 text-white hover:bg-red-700"
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button.tsx Snapshot tests matches snapshot for danger button from 4.30.2025 1`] = `
<div>
  <button
    aria-label="Danger Button"
    class="px-4 py-2 rounded-md transition-colors focus:outline-none focus:ring-2 
          text-sm sm:text-base bg-red-600 text-white hover:bg-red-700 focus:ring-red-200 "
    type="button"
  >
    Danger Button
  </button>
</div>
`;

exports[`Button.tsx Snapshot tests matches snapshot for disabled button from 4.30.2025 1`] = `
<div>
  <button
    aria-label="Disabled Button"
    class="px-4 py-2 rounded-md transition-colors focus:outline-none focus:ring-2 
          text-sm sm:text-base bg-primary text-white hover:bg-primary-600 focus:ring-primary-200 "
    disabled=""
    type="button"
  >
    Disabled Button
  </button>
</div>
`;

exports[`Button.tsx Snapshot tests matches snapshot for primary button from 4.30.2025 1`] = `
<div>
  <button
    aria-label="Primary Button"
    class="px-4 py-2 rounded-md transition-colors focus:outline-none focus:ring-2 
          text-sm sm:text-base bg-primary text-white hover:bg-primary-600 focus:ring-primary-200 "
    type="button"
  >
    Primary Button
  </button>
</div>
`;

exports[`Button.tsx Snapshot tests matches snapshot for secondary button from 4.30.2025 1`] = `
<div>
  <button
    aria-label="Secondary Button"
    class="px-4 py-2 rounded-md transition-colors focus:outline-none focus:ring-2 
          text-sm sm:text-base bg-background-elevated text-neutral-text border border-primary-100 hover:bg-background-highlight focus:ring-primary-200 dark:border-primary-200 "
    type="button"
  >
    Secondary Button
  </button>
</div>
`;
